--- a/Front/index.html
+++ b/Front/index.html
@@ -17,8 +17,9 @@
                 <a href="#hero">🎸 Best Guitars</a>
             </h1>
             <div>
-                <button id="hamburger-button" class="text-3xl md:hidden cursor-pointer">
-                    &#9776;
+                <button id="hamburger-button" class="text-3xl md:hidden cursor-pointer relative w-8 h-8">
+                    <!-- &#9776; -->
+                    <div class="bg-white w-8 h-1 rounded absolute top-4 -mt-0.5 transition-all duration-500 before:content-[''] before:bg-white before:w-8 before:h-1 before:rounded before:absolute before:-translate-x-4 before:-translate-y-3 before:transition-all before:duration-500 after:content-[''] after:bg-white after:w-8 after:h-1 after:rounded after:absolute after:-translate-x-4 after:translate-y-3 after:transition-all after:duration-500"></div>
                 </button>
                 <nav class="hidden sm:block space-x-8 text-xl" aria-label="main">
                     <a href="#guitars" class="hover:opacity-90">Melhores Guitarras</a>
@@ -27,10 +28,10 @@
                 </nav>
             </div>
         </section>
-        <section id="mobile-menu" class="absolute top-0 bg-slate-900 w-full text-5xl flex-col justify-content-center origin-top animate-open-menu hidden">
-            <button class="text-8xl self-end px-6">
+        <section id="mobile-menu" class="absolute top-68 bg-slate-900 w-full text-5xl flex-col justify-content-center origin-top animate-open-menu hidden">
+            <!-- <button class="text-8xl self-end px-6">
                 &times;
-            </button>
+            </button> -->
             <nav class="flex flex-col min-h-screen items-center py-8" aria-label="mobile">
                 <a href="#hero" class="w-full text-center py-6 hover:opacity-90">Início</a>
                 <a href="#guitars" class="w-full text-center py-6 hover:opacity-90">Melhores Guitarras</a>
@@ -163,10 +164,10 @@
         <section class="max-w-4xl mx-auto p-4 flex flex-col sm:flex-row sm:justify-between">
             <address>
                 <h2>BestGuitars Guitarras e acessórios, LTDA.</h2>
-                046 Vila Isabel<br>
-                Pato Branco, Paraná 85504-290<br>
-                Email: <a href="joaofaggion2003@gmail.com">joaofaggion2003@gmail.com</a><br>
-                Telefone: <a href="telefone:+5546991150027">(46) 9 9115-0027</a>
+                Algum Lugar<br>
+                Pato Branco, Paraná 00000-000<br>
+                Email: <a href="testesBestGuitras@gmail.com">testesBestGuitras@gmail.com</a><br>
+                Telefone: <a href="telefone:+5546991150027">(00) 9 0000-0000</a>
             </address>
             <nav class="hidden md:flex flex-col gap-2" aria-label="footer">
                 <a href="#guitars" class="hover:opacity-90">Nossas Guitarras</a>
